<resources>
    <string name="app_name">Land Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quadrangle_area">QUADRANGLE AREA</string>
    <string name="length_1">Length 1</string>
    <string name="length_2">Length 2</string>
    <string name="width_1">Width 1</string>
    <string name="width_2">Width 2</string>
    <string name="area">Area</string>
    <string name="caption">Caption</string>
    <string name="title_optional">Title (Optional)</string>
    <string name="title">Title</string>
    <string name="ft">Ft</string>
    <string name="inch">Inch</string>
    <string name="base">Base</string>
    <string name="height">Height</string>
    <string name="triangel_area">TRIANGEL AREA</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="save_calculation_history">Save Calculation History</string>
    <string name="desim">Desim</string>
    <string name="gonda">Gonda</string>
    <string name="ft_sqare">Ft²</string>
    <string name="save">Save</string>
    <string name="developer">Developer :</string>
    <string name="name_zakaria_ahmmed">Name: Zakaria Ahmmed</string>
    <string name="college_govt_titumir_college">College: Govt. Titumir College</string>
    <string name="subject_mathematics">Subject: Mathematics</string>
    <string name="master_s_final_year">Master\'s (Final Year)</string>
    <string name="email_ahmmedzakaria_gmail_com">Email: ahmmedzakaria@gmail.com</string>
    <string name="change_unit">Change unit</string>
    <string name="show_result">Show Result</string>
</resources>
