<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahmme.landcalculator.quadrangle.QuadrangleFragmet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        tools:context="com.example.ahmme.landcalculator.Quadrangle_Calculation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:padding="@dimen/padding_very_small"
            android:layout_margin="@dimen/margin_small">
            <EditText
                android:id="@+id/caption"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.5"
                android:hint="@string/title_optional"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/black"
                android:background="@color/white" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginBottom="@dimen/margin_small">

            <Button
                android:id="@+id/result_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/show_result"
                android:textAllCaps="false"
                android:layout_gravity="bottom"
                android:textSize="@dimen/text_size_big"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/text_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:padding="@dimen/padding_very_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_very_small">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/length_1"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/length_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/black"
                android:background="@color/white"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/ft"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/green"
                android:id="@+id/textView_inch"
                android:layout_marginRight="@dimen/margin_small"/>
            <EditText
                android:id="@+id/length_1_inch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/black"
                android:background="@color/white"
                android:inputType="number"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@color/white"
                android:text="@string/inch"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:padding="@dimen/padding_very_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_very_small">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/length_2"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/white"
                />
            <EditText
                android:id="@+id/length_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/black"
                android:background="@color/white"
                android:inputType="numberDecimal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/ft"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/green"
                android:layout_marginRight="@dimen/margin_small"/>
            <EditText
                android:id="@+id/length_2_inch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/black"
                android:background="@color/white"
                android:inputType="number"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@color/white"
                android:text="@string/inch"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/green" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:padding="@dimen/padding_very_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_very_small">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/width_1"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/white"
                />
            <EditText
                android:id="@+id/width_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/black"
                android:background="@color/white"
                android:inputType="numberDecimal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/ft"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/green"
                android:layout_marginRight="@dimen/margin_small"/>
            <EditText
                android:id="@+id/width_1_inch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/black"
                android:background="@color/white"
                android:inputType="number"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@color/white"
                android:text="@string/inch"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:padding="@dimen/padding_very_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_very_small">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/width_2"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/width_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/black"
                android:background="@color/white"
                android:inputType="numberDecimal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/ft"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/green"
                android:layout_marginRight="@dimen/margin_small"/>
            <EditText
                android:id="@+id/width_2_inch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/black"
                android:background="@color/white"
                android:inputType="number"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@color/white"
                android:text="@string/inch"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:textSize="@dimen/text_size_common"
                android:textColor="@color/green" />
        </LinearLayout>
<LinearLayout
    android:id="@+id/quadrangle_result_layout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    android:padding="@dimen/padding_very_small"
    android:layout_margin="@dimen/margin_small">
    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_small"
        android:textSize="@dimen/text_size_common"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:textColor="#0926e2" />
</LinearLayout>



    </LinearLayout>

</FrameLayout>
